# sik2-2025

./: CMakeLists.txt  Makefile  client_data.cpp  client_data.h  client_main.cpp  common.c  common.h  common2.cpp  common2.h  debug.h  err.h  game.cpp  game.h  message.h  protocol-client.cpp  protocol-client.h  protocol_server.cpp  protocol_server.h  reading.cpp  reading.h  server_main.cpp
coeffs/: coeff_gen.py  coeffs.txt
